--- a/.gitignore
+++ b/.gitignore
@@ -465,3 +465,9 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/pixelnest.iml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/vcs.xml
